--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "0.1.35"
+libc = "0.2.71"
+parking_lot = "0.10.2"
+
+[lib]
+name = "libaiofut"
+path = "src/lib.rs"
+crate-type = ["dylib", "rlib", "staticlib"]
