--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 async-trait = "0.1.35"
 libc = "0.2.71"
 parking_lot = "0.10.2"
+crossbeam-channel = "0.4.2"
 
 [dev-dependencies]
 futures = "0.3"
