--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "libaio-futures"
 version = "0.1.0"
 authors = ["Determinant <tederminant@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+homepage = "https://github.com/Determinant/libaio-futures"
+keywords = ["libaio", "aio", "async", "futures"]
 
 [dependencies]
 libc = "0.2.71"
