--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Determinant <tederminant@gmail.com>"]
 edition = "2018"
 homepage = "https://github.com/Determinant/libaio-futures"
 keywords = ["libaio", "aio", "async", "futures"]
+license = "MIT"
+description = "Straightforward Linux AIO using Futures/async/await."
 
 [dependencies]
 libc = "0.2.71"
