--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "libaio-futures"
-version = "0.1.7"
+version = "0.1.8"
 authors = ["Determinant <tederminant@gmail.com>"]
 edition = "2018"
 homepage = "https://github.com/Determinant/libaio-futures"
@@ -8,15 +8,18 @@ keywords = ["libaio", "aio", "async", "futures"]
 license = "MIT"
 description = "Straightforward Linux AIO using Futures/async/await."
 
+[features]
+emulated-failure = []
+
 [dependencies]
-libc = "0.2.71"
-parking_lot = "0.10.2"
-crossbeam-channel = "0.4.2"
+libc = "0.2.81"
+parking_lot = "0.11.1"
+crossbeam-channel = "0.5.0"
 
 [dev-dependencies]
-futures = "0.3.5"
+futures = "0.3.8"
 
 [lib]
-name = "libaiofut"
+name = "aiofut"
 path = "src/lib.rs"
 crate-type = ["dylib", "rlib", "staticlib"]
